tests/sksl/errors/Ossfuzz26700.dsl.glsl
### Compilation failed:

error: interface blocks are not yet supported
error: no type named 'q'
2 errors
